# medspa_ai_project

./: .env.example  .gitignore  Makefile  README.md  app.py  config_file.config  find_my_ip.sh  gsheet_extract.py  pyproject.toml  requirements.txt  setup.py  template.py  test.ipynb
config/: config.yaml
medspa_ai/components/: data_ingestion.py
medspa_ai/configuration/: __init__.py  base_syncer.py  configuration.py  gcloud_syncer.py
medspa_ai/constants/: __init__.py
medspa_ai/entity/: config_entity.py
medspa_ai/logger/: __init__.py
medspa_ai/pipeline/: train_pipeline.py
medspa_ai/utils/: common.py
medspa_evn/: pyvenv.cfg
medspa_evn/Scripts/: activate  activate.bat
